main/default/objects/FilteredData__c/FilteredData__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>FilteredData</label>
</CustomObject>