main/default/objects/FilteredData__c/fields/Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Filter_Field__c</fullName>
    <label>Filter Field</label>
    <type>TextArea</type>
</CustomField>