main/default/objects/FilteredData__c/fields/Filtered_Label__c.field-meta.xml
<CustomField>
    <fullName>Filtered_Label__c</fullName>
    <label>Filtered_Label</label>
    <type>TextArea</type>
</CustomField>