main/default/objects/FilteredData__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>TextArea</type>
</CustomField>